Fixed layout issue for content div in banner

--- a/src/css/landingpage/banner.module.css
+++ b/src/css/landingpage/banner.module.css
@@ -64,17 +64,24 @@
   .main {
     height: 90vh;
   }
+
+  .content {
+    margin-top: 2%;
+    padding: 30px;
+  }
   .heading {
     font-size: 2.5rem;
+    padding: 5px;
   }
 
   .texts {
     font-size: 1.2rem;
+    padding: 15px;
   }
 
   .cta {
     width: 500px;
-    margin: 0 auto;
+    margin: 20px auto 10px;
   }
 
   .banner_image {
